[gd_scene load_steps=5 format=2]

[ext_resource path="res://Grappling.tscn" type="PackedScene" id=1]
[ext_resource path="res://Player.gd" type="Script" id=2]

[sub_resource type="CapsuleMesh" id=1]

[sub_resource type="CapsuleShape" id=2]

[node name="Player" type="KinematicBody"]
script = ExtResource( 2 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1.2, 0, 1, -1.95505e-07, 0, 0, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1.2, 0, 1, -1.95505e-07, 0, 0, 0 )
shape = SubResource( 2 )

[node name="Head" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.954382, 0 )

[node name="ClippedCamera" type="ClippedCamera" parent="Head"]
transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0.5, 0 )
current = true

[node name="Grappling" parent="Head" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.659455, 0, 0.890955 )

[node name="FirePoint" type="Spatial" parent="Head/Grappling"]

[node name="Firecast" type="RayCast" parent="Head/Grappling/FirePoint"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0.056876, 0.0402784, 1.23855 )
enabled = true
cast_to = Vector3( 0, 0, 50 )

[node name="HeadBunker" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.954382, 0 )

[node name="LegBunker" type="RayCast" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.954382, 0 )

[node name="SideRaycasts" type="Spatial" parent="."]

[node name="LeftSide" type="RayCast" parent="SideRaycasts"]
enabled = true
cast_to = Vector3( 1.5, 0, 0 )

[node name="RightSide" type="RayCast" parent="SideRaycasts"]
enabled = true
cast_to = Vector3( -2, 0, 0 )

[node name="FrontSide" type="RayCast" parent="SideRaycasts"]
enabled = true
cast_to = Vector3( 0, 0, 1.5 )

[node name="BackSide" type="RayCast" parent="SideRaycasts"]
enabled = true
cast_to = Vector3( 0, 0, -1.5 )

[node name="LeftFrontSide" type="RayCast" parent="SideRaycasts"]
enabled = true
cast_to = Vector3( 1.1, 0, 1.1 )

[node name="RightFrontSide" type="RayCast" parent="SideRaycasts"]
enabled = true
cast_to = Vector3( -1.1, 0, 1.1 )

[node name="LeftBackSide" type="RayCast" parent="SideRaycasts"]
enabled = true
cast_to = Vector3( 1.1, 0, -1.1 )

[node name="RightBackSide" type="RayCast" parent="SideRaycasts"]
enabled = true
cast_to = Vector3( -1.1, 0, -1.1 )

[node name="ImmediateGeometry" type="ImmediateGeometry" parent="."]
